Fix fab button z-index

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -772,7 +772,7 @@ html,body {
 }
 .fixed-action-btn,
 #confirm-fab{
-    z-index: 9999;
+    z-index: 1000;
 }
 @media #{$small-and-down} {
     form {
